VB/Lib/xcgui.bas


Declare Function XC_UnicodeToAnsi Lib "xcgui.dll" (ByVal pIn As String, ByVal inLen As Long, ByVal pOut As String, ByVal outLen As Long) As Long
Declare Function XC_AnsiToUnicode Lib "xcgui.dll" (ByVal pIn As String, ByVal inLen As Long, ByVal pOut As String, ByVal outLen As Long) As Long
Declare Sub XC_DebugToFileInfo Lib "xcgui.dll" (ByVal pInfo As String)
Declare Function XC_IsHELE Lib "xcgui.dll" (ByVal hEle As Long) As Boolean
Declare Function XC_IsHWINDOW Lib "xcgui.dll" (ByVal hWindow As Long) As Boolean
Declare Function XC_IsShape Lib "xcgui.dll" (ByVal hShape As Long) As Boolean
Declare Function XC_IsHXCGUI Lib "xcgui.dll" (ByVal hXCGUI As Long, ByVal ntype As Long) As Boolean
Declare Function XC_IsSViewExtend Lib "xcgui.dll" (ByVal hEle As Long) As Boolean
Declare Function XC_GetObjectType Lib "xcgui.dll" (ByVal hXCGUI As Long) As Long
Declare Function XC_GetObjectByID Lib "xcgui.dll" (ByVal nID As Long) As Long
Declare Function XC_RectInRect Lib "xcgui.dll" (ByVal pRect1 As rect, ByVal pRect2 As rect) As Boolean
Declare Sub XC_CombineRect Lib "xcgui.dll" (ByVal pDest As rect, ByVal pSrc1 As rect, ByVal pSrc2 As rect)
Declare Sub XC_ShowLayoutFrame Lib "xcgui.dll" (ByVal bShow As Boolean)
Declare Sub XC_SetLayoutFrameColor Lib "xcgui.dll" (ByVal color As Long)
Declare Function XC_LoadLayout Lib "xcgui.dll" (ByVal pFileName As String) As Long
Declare Function XC_LoadResource Lib "xcgui.dll" (ByVal pFileName As String, ByVal pDir As String) As Boolean
Declare Function XC_TemplateLoad Lib "xcgui.dll" (ByVal ntype As Long, ByVal pFileName As String) As template_info_i
Declare Sub XC_TemplateDestroy Lib "xcgui.dll" (ByVal pInfo As template_info_i)
Declare Function XInitXCGUI Lib "xcgui.dll" (ByVal pText As String) As Boolean
Declare Sub XRunXCGUI Lib "xcgui.dll" ()
Declare Sub XExitXCGUI Lib "xcgui.dll" ()
Declare Function XBtn_Create Lib "xcgui.dll" (ByVal x As Long, ByVal y As Long, ByVal cx As Long, ByVal cy As Long, ByVal pName As String, ByVal hParent As Long) As Long
Declare Function XBtn_IsCheck Lib "xcgui.dll" (ByVal hEle As Long) As Boolean
Declare Function XBtn_SetCheck Lib "xcgui.dll" (ByVal hEle As Long, ByVal bCheck As Boolean) As Boolean
Declare Sub XBtn_SetState Lib "xcgui.dll" (ByVal hEle As Long, ByVal nState As Long)
Declare Function XBtn_GetState Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XBtn_SetStyle Lib "xcgui.dll" (ByVal hEle As Long, ByVal nStyle As Long)
Declare Function XBtn_GetStyle Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XBtn_SetType Lib "xcgui.dll" (ByVal hEle As Long, ByVal ntype As Long)
Declare Function XBtn_GetType Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XBtn_SetGroupID Lib "xcgui.dll" (ByVal hEle As Long, ByVal nID As Long)
Declare Function XBtn_GetGroupID Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XBtn_SetBindEle Lib "xcgui.dll" (ByVal hEle As Long, ByVal hBindEle As Long)
Declare Function XBtn_GetBindEle Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XBtn_SetTextAlign Lib "xcgui.dll" (ByVal hEle As Long, ByVal flag As Long)
Declare Function XBtn_GetTextAlign Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XBtn_SetIconAlign Lib "xcgui.dll" (ByVal hEle As Long, ByVal align As Long)
Declare Sub XBtn_SetOffset Lib "xcgui.dll" (ByVal hEle As Long, ByVal x As Long, ByVal y As Long)
Declare Sub XBtn_SetOffsetIcon Lib "xcgui.dll" (ByVal hEle As Long, ByVal x As Long, ByVal y As Long)
Declare Sub XBtn_SetIconSpace Lib "xcgui.dll" (ByVal hEle As Long, ByVal size As Long)
Declare Sub XBtn_GetText Lib "xcgui.dll" (ByVal hEle As Long, ByVal pOut As String, ByVal nlen As Long)
Declare Sub XBtn_SetText Lib "xcgui.dll" (ByVal hEle As Long, ByVal pName As String)
Declare Sub XBtn_SetImageLeave Lib "xcgui.dll" (ByVal hEle As Long, ByVal hImage As Long)
Declare Sub XBtn_SetImageStay Lib "xcgui.dll" (ByVal hEle As Long, ByVal hImage As Long)
Declare Sub XBtn_SetImageDown Lib "xcgui.dll" (ByVal hEle As Long, ByVal hImage As Long)
Declare Sub XBtn_SetImageCheck Lib "xcgui.dll" (ByVal hEle As Long, ByVal hImage As Long)
Declare Sub XBtn_SetImageDisable Lib "xcgui.dll" (ByVal hEle As Long, ByVal hImage As Long)
Declare Sub XBtn_SetIcon Lib "xcgui.dll" (ByVal hEle As Long, ByVal hImage As Long)
Declare Function XComboBox_Create Lib "xcgui.dll" (ByVal x As Long, ByVal y As Long, ByVal cx As Long, ByVal cy As Long, ByVal hParent As Long) As Long
Declare Function XComboBox_SetSelItem Lib "xcgui.dll" (ByVal hEle As Long, ByVal iIndex As Long) As Boolean
Declare Sub XComboBox_BindApapter Lib "xcgui.dll" (ByVal hEle As Long, ByVal hAdapter As Long)
Declare Sub XComboBox_SetItemTemplateXML Lib "xcgui.dll" (ByVal hEle As Long, ByVal pXmlFile As String)
Declare Sub XComboBox_EnableDrawButton Lib "xcgui.dll" (ByVal hEle As Long, ByVal bEnable As Boolean)
Declare Sub XComboBox_EnableEdit Lib "xcgui.dll" (ByVal hEle As Long, ByVal bEdit As Boolean)
Declare Sub XComboBox_SetImageStay Lib "xcgui.dll" (ByVal hEle As Long, ByVal hImage As Long)
Declare Sub XComboBox_SetImageDown Lib "xcgui.dll" (ByVal hEle As Long, ByVal hImage As Long)
Declare Sub XAdapter_Destroy Lib "xcgui.dll" (ByVal hAdapter As Long)
Declare Function XAdapterListView_Create Lib "xcgui.dll" () As Long
Declare Function XAdapterListView_Group_AddColumn Lib "xcgui.dll" (ByVal hAdapter As Long, ByVal pName As String) As Long
Declare Function XAdapterListView_Group_AddItemText Lib "xcgui.dll" (ByVal hAdapter As Long, ByVal pValue As String) As Long
Declare Function XAdapterListView_Group_AddItemTextEx Lib "xcgui.dll" (ByVal hAdapter As Long, ByVal pName As String, ByVal pValue As String) As Long
Declare Function XAdapterListView_Group_AddItemImage Lib "xcgui.dll" (ByVal hAdapter As Long, ByVal hImage As Long) As Long
Declare Function XAdapterListView_Group_AddItemImageEx Lib "xcgui.dll" (ByVal hAdapter As Long, ByVal pName As String, ByVal hImage As Long) As Long
Declare Function XAdapterListView_Item_AddColumn Lib "xcgui.dll" (ByVal hAdapter As Long, ByVal pName As String) As Long
Declare Function XAdapterListView_Item_AddItemText Lib "xcgui.dll" (ByVal hAdapter As Long, ByVal iGroup As Long, ByVal pValue As String) As Long
Declare Function XAdapterListView_Item_AddItemTextEx Lib "xcgui.dll" (ByVal hAdapter As Long, ByVal iGroup As Long, ByVal pName As String, ByVal pValue As String) As Long
Declare Function XAdapterListView_Item_AddItemImage Lib "xcgui.dll" (ByVal hAdapter As Long, ByVal iGroup As Long, ByVal hImage As Long) As Long
Declare Function XAdapterListView_Item_AddItemImageEx Lib "xcgui.dll" (ByVal hAdapter As Long, ByVal iGroup As Long, ByVal pName As String, ByVal hImage As Long) As Long
Declare Function XAdapterListView_Item_SetText Lib "xcgui.dll" (ByVal hAdapter As Long, ByVal iGroup As Long, ByVal iItem As Long, ByVal iColumn As Long, ByVal pValue As String) As Boolean
Declare Function XAdapterListView_Item_SetTextEx Lib "xcgui.dll" (ByVal hAdapter As Long, ByVal iGroup As Long, ByVal iItem As Long, ByVal pName As String, ByVal pValue As String) As Boolean
Declare Function XAdapterListView_Item_SetImage Lib "xcgui.dll" (ByVal hAdapter As Long, ByVal iGroup As Long, ByVal iItem As Long, ByVal iColumn As Long, ByVal hImage As Long) As Boolean
Declare Function XAdapterListView_Item_SetImageEx Lib "xcgui.dll" (ByVal hAdapter As Long, ByVal iGroup As Long, ByVal iItem As Long, ByVal pName As String, ByVal hImage As Long) As Boolean
Declare Sub XAdapterListView_DeleteAll Lib "xcgui.dll" (ByVal hAdapter As Long)
Declare Function XAdapterListView_Item_GetTextEx Lib "xcgui.dll" (ByVal hAdapter As Long, ByVal iGroup As Long, ByVal iItem As Long, ByVal pName As String, ByVal pOut As String, ByVal nOutLen As Long) As Boolean
Declare Function XAdapterListView_Item_GetImageEx Lib "xcgui.dll" (ByVal hAdapter As Long, ByVal iGroup As Long, ByVal iItem As Long, ByVal pName As String) As Long
Declare Function XAdapterTable_Create Lib "xcgui.dll" () As Long
Declare Function XAdapterTable_AddColumn Lib "xcgui.dll" (ByVal hAdapter As Long, ByVal pName As String) As Long
Declare Function XAdapterTable_AddItemText Lib "xcgui.dll" (ByVal hAdapter As Long, ByVal pValue As String) As Long
Declare Function XAdapterTable_AddItemTextEx Lib "xcgui.dll" (ByVal hAdapter As Long, ByVal pName As String, ByVal pValue As String) As Long
Declare Function XAdapterTable_AddItemImage Lib "xcgui.dll" (ByVal hAdapter As Long, ByVal hImage As Long) As Long
Declare Function XAdapterTable_AddItemImageEx Lib "xcgui.dll" (ByVal hAdapter As Long, ByVal pName As String, ByVal hImage As Long) As Long
Declare Function XAdapterTable_InsertItemText Lib "xcgui.dll" (ByVal hAdapter As Long, ByVal iItem As Long, ByVal pValue As String) As Boolean
Declare Function XAdapterTable_InsertItemTextEx Lib "xcgui.dll" (ByVal hAdapter As Long, ByVal iItem As Long, ByVal pName As String, ByVal pValue As String) As Boolean
Declare Function XAdapterTable_InsertItemImage Lib "xcgui.dll" (ByVal hAdapter As Long, ByVal iItem As Long, ByVal hImage As Long) As Boolean
Declare Function XAdapterTable_InsertItemImageEx Lib "xcgui.dll" (ByVal hAdapter As Long, ByVal iItem As Long, ByVal pName As String, ByVal hImage As Long) As Boolean
Declare Function XAdapterTable_SetItemText Lib "xcgui.dll" (ByVal hAdapter As Long, ByVal iItem As Long, ByVal iColumn As Long, ByVal pValue As String) As Boolean
Declare Function XAdapterTable_SetItemTextEx Lib "xcgui.dll" (ByVal hAdapter As Long, ByVal iItem As Long, ByVal pName As String, ByVal pValue As String) As Boolean
Declare Function XAdapterTable_SetItemImage Lib "xcgui.dll" (ByVal hAdapter As Long, ByVal iItem As Long, ByVal iColumn As Long, ByVal hImage As Long) As Boolean
Declare Function XAdapterTable_SetItemImageEx Lib "xcgui.dll" (ByVal hAdapter As Long, ByVal iItem As Long, ByVal pName As String, ByVal hImage As Long) As Boolean
Declare Function XAdapterTable_DeleteItem Lib "xcgui.dll" (ByVal hAdapter As Long, ByVal iItem As Long) As Boolean
Declare Function XAdapterTable_DeleteItemEx Lib "xcgui.dll" (ByVal hAdapter As Long, ByVal iItem As Long, ByVal nCount As Long) As Boolean
Declare Function XAdapterTable_GetCount Lib "xcgui.dll" (ByVal hAdapter As Long) As Long
Declare Function XAdapterTable_GetCountColumn Lib "xcgui.dll" (ByVal hAdapter As Long) As Long
Declare Function XAdapterTable_GetItemText Lib "xcgui.dll" (ByVal hAdapter As Long, ByVal iItem As Long, ByVal iColumn As Long, ByVal pOut As String, ByVal nOutLen As Long) As Boolean
Declare Function XAdapterTable_GetItemImage Lib "xcgui.dll" (ByVal hAdapter As Long, ByVal iItem As Long, ByVal iColumn As Long) As Long
Declare Function XAdapterTable_GetItemTextEx Lib "xcgui.dll" (ByVal hAdapter As Long, ByVal iItem As Long, ByVal pName As String, ByVal pOut As String, ByVal nOutLen As Long) As Boolean
Declare Function XAdapterTable_GetItemImageEx Lib "xcgui.dll" (ByVal hAdapter As Long, ByVal iItem As Long, ByVal pName As String) As Long
Declare Function XAdapterTree_Create Lib "xcgui.dll" () As Long
Declare Function XAdapterTree_AddColumn Lib "xcgui.dll" (ByVal hAdapter As Long, ByVal pName As String) As Long
Declare Function XAdapterTree_InsertItemText Lib "xcgui.dll" (ByVal hAdapter As Long, ByVal pValue As String, ByVal nParentID As Long, ByVal insertID As Long) As Long
Declare Function XAdapterTree_InsertItemTextEx Lib "xcgui.dll" (ByVal hAdapter As Long, ByVal pName As String, ByVal pValue As String, ByVal nParentID As Long, ByVal insertID As Long) As Long
Declare Function XAdapterTree_InsertItemImage Lib "xcgui.dll" (ByVal hAdapter As Long, ByVal hImage As Long, ByVal nParentID As Long, ByVal insertID As Long) As Long
Declare Function XAdapterTree_InsertItemImageEx Lib "xcgui.dll" (ByVal hAdapter As Long, ByVal pName As String, ByVal hImage As Long, ByVal nParentID As Long, ByVal insertID As Long) As Long
Declare Function XAdapterTree_GetCount Lib "xcgui.dll" (ByVal hAdapter As Long) As Long
